# Steering-Behavious-Raylib

./: CMakeLists.txt  LICENSE  README.md  compile_commands.json
.cache/clangd/index/: main.cpp.5B64CBA9F9FA6585.idx
include/: ball.h  camera.h  collision_object.h  consts.h  game_object.h  game_states.h  kinematic.h  player.h  player_states.h  scene.h  state.h  state_machine.h
resources/: player.glb
src/: ball.cpp  camera.cpp  collision_object.cpp  game_object.cpp  game_state.cpp  kinematic.cpp  main.cpp  player.cpp  player_states.cpp  scene.cpp  state.cpp  state_machine.cpp
